# colonoscopy-3b

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ld_txt2txt.py  pyproject.toml  tre_terminal_code  xml2txt.py
.devcontainer/: Dockerfile  README.md  docker-compose.yml  launch_image.bash  launch_image_local_ap.bash
.devcontainer-Blender/: README.md
.devcontainer-ml/: Dockerfile  devcontainer.json  docker-compose.yml  docker_build_scritp.sh  dockerfile.streamlit  dockerfile.yolo
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: onboarding.md
Blender/: install_and_enable_addons_render.py
data/: README.md
data/jpg_to_png/: jpg_to_png.py
data/reformat_labels/: HyperKvasir.py
data/train_test_valid_split/: split.py
docs/: README.md
src/: __init__.py  run_test_file_ap.py  test_file_ap.py
src/blender_colon/models/: README.md
src/blender_colonoscopy/apis/: README.md  instructions.md
src/blender_colonoscopy/models/: README.md
src/blender_colonoscopy/notebooks/: run_yolov7.ipynb
